--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Build
       run: xcodebuild -scheme Vexillum -destination generic/platform=iOS
     - name: Run tests
-      run: xcodebuild test -scheme Vexillum -destination generic/platform=iOS
+      run: xcodebuild test -scheme "Vexillum-Package" -destination generic/platform=iOS
